sync 1.18 branch: api split, quest visibility, snake_case, quest tasks merge